--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ body {
     --font-size-x-small: 0.75rem;
     --font-size-small: 0.875rem;
     --font-size-large: 2rem;
-    --font-size-x-large: 2.5rem;
+    --font-size-x-large: 2.25rem;
 
     --spacing-unit: 1rem;
     --spacing-small: 0.5rem;
@@ -60,6 +60,7 @@ ul,
 ol {
     list-style: none;
     padding: 0;
+    margin: 0;
 }
 
 a {
@@ -77,6 +78,7 @@ a:active {
 h1,
 h2 {
     color: var(--primary-color);
+    margin: var(--spacing-unit) 0;
 }
 
 h1 {
